--- a/Project.toml
+++ b/Project.toml
@@ -10,5 +10,6 @@ DataConvenience = "3b531cbf-ee43-4e67-8118-dca2c9372f86"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
-IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
